[gd_scene load_steps=6 format=2]

[ext_resource path="res://shot.gd" type="Script" id=1]
[ext_resource path="res://gfx/Clean-Retro-Lines-Player.png" type="Texture" id=2]
[ext_resource path="res://audio/fxs/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/fxs/enemyHit.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.3227

[node name="shot" type="KinematicBody2D"]
visible = false
position = Vector2( 100.172, 251.884 )
collision_layer = 64
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.375769, -0.0531368 )
texture = ExtResource( 2 )
offset = Vector2( 4.66889, -1.58241 )
vframes = 5
hframes = 7
frame = 16

[node name="StaticBody2D" type="Area2D" parent="Sprite"]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
position = Vector2( 0.371745, 0.14487 )
shape = SubResource( 1 )

[node name="shotAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Sprite/StaticBody2D" to="." method="_on_StaticBody2D_body_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
